bizinikiwi/pezframe/support/test/tests/pezpallet_ui/event_field_not_member.stderr
error[E0277]: the trait bound `<T as pezpallet::Config>::Bar: Clone` is not satisfied
  --> tests/pezpallet_ui/event_field_not_member.rs:40:7
   |
40 |         B { b: T::Bar },
   |             ^ the trait `Clone` is not implemented for `<T as pezpallet::Config>::Bar`

error[E0369]: binary operation `==` cannot be applied to type `&<T as pezpallet::Config>::Bar`
  --> tests/pezpallet_ui/event_field_not_member.rs:40:7
   |
40 |         B { b: T::Bar },
   |             ^

error[E0277]: `<T as pezpallet::Config>::Bar` doesn't implement `std::fmt::Debug`
  --> tests/pezpallet_ui/event_field_not_member.rs:40:7
   |
40 |         B { b: T::Bar },
   |             ^ `<T as pezpallet::Config>::Bar` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `<T as pezpallet::Config>::Bar`
   = note: required for `&<T as pezpallet::Config>::Bar` to implement `std::fmt::Debug`
   = note: required for the cast from `&&<T as pezpallet::Config>::Bar` to `&dyn std::fmt::Debug`
